--- a/Proctor-prototype/index.html
+++ b/Proctor-prototype/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="face-api.js"></script>
+  <script src="face-api.min.js"></script>
   <script defer src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.7.4"> </script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
